--- a/Profile/app/src/main/res/layout/activity_main.xml
+++ b/Profile/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#03A9F4"
+    android:background="#2196F3"
     tools:context=".MainActivity">
 
     <TextView
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="76dp"
-        android:background="#03A9F4"
+        android:background="#633BAA"
         android:backgroundTint="#E91E63"
         android:text="@string/textButtonProfile"
         android:textAlignment="center"
