--- a/FinalProject/Sprint1/app/src/main/res/values/themes.xml
+++ b/FinalProject/Sprint1/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RowReduction" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RowReduction" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,24 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="NumberButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35pt</item>
+        <item name="android:layout_weight">1</item>
+        <item name="background">@color/black</item>
+        <item name="android:textSize">10pt</item>
+        <item name="android:layout_margin">0.5pt</item>
+    </style>
+
+    <style name="EquationVariable">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35pt</item>
+        <item name="android:layout_weight">1</item>
+        <item name="backgroundTint">@color/buttonColor</item>
+        <item name="android:textSize">10pt</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_margin">0.5pt</item>
     </style>
 </resources>
