--- a/FinalProject/FinalProjectV2/app/src/main/res/values/colors.xml
+++ b/FinalProject/FinalProjectV2/app/src/main/res/values/colors.xml
@@ -8,7 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
-    <color name="backgroundColor">#FFC0CAAD</color>
-    <color name="buttonColor">#FF654C4F</color>
+    <color name="colorPrimary">#FFBB86FC</color>
+    <color name="numberActionButton">#FF018786</color>
 </resources>
