--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
 
@@ -185,238 +186,159 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black">
+        android:background="@color/backgroundColor">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="1pt"
-            android:layout_marginTop="1pt"
+            android:layout_marginBottom="0pt"
+            android:layout_marginTop="0pt"
             >
 
             <Button
+                style="@style/NumberButton"
                 android:id="@+id/button7"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="7"
-                android:textSize="12pt"
                 />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button8"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="8"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button9"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginEnd="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="9"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonDEL"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginEnd="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="@string/del"
-                android:textSize="12pt" />
+                android:text="DEL"
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonLeft"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="L"
-                android:textSize="12pt" />
-
+                />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="1pt">
+            >
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginEnd="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="4"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button5"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginEnd="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="5"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button6"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginEnd="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="6"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonPlusMinus"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="+/-"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonRight"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="R"
-                android:textSize="12pt" />
-
+                />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="1pt">
+            >
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="1"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="2"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="@string/_3"
-                android:textSize="12pt" />
+                android:text="3"
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/EquationVariable"
                 android:id="@+id/buttonAddEqn"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="+Eqn"
-                android:textSize="12pt" />
+                android:text="+E"
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/EquationVariable"
                 android:id="@+id/buttonAddVar"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="+Var"
-                android:textSize="12pt" />
+                android:text="+V"
 
-
+                />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="1pt">
+            >
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonDot"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="."
-                android:textSize="12pt" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button0"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="0"
-                android:textSize="12pt" />
-
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonFrac"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
                 android:text="/"
-                android:textSize="12pt" />
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
+                android:id="@+id/button0"
+                android:text="0"
+                />
+
+            <Button
+                style="@style/NumberButton"
+                android:id="@+id/buttonDot"
+                android:text="."
+                />
+
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonSubEqn"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_marginRight="1pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="-Eqn"
-                android:textSize="12pt" />
+                android:text="-E"
+                />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
+                style="@style/NumberButton"
                 android:id="@+id/buttonSubVar"
-                android:layout_width="match_parent"
-                android:layout_height="30pt"
-                android:layout_weight="1"
-                android:background="@color/purple_200"
-                android:text="-Var"
-                android:textSize="12pt" />
-
+                android:text="-V"
+                />
 
         </TableRow>
+
+
 
     </TableLayout>
 </LinearLayout>
