--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_main2.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_main2.xml
@@ -1,7 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2"/>
+    android:orientation="vertical"
+    android:background="@color/backgroundColor"
+    tools:context=".MainActivity2">
+
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="20pt"
+        android:layout_marginBottom="20pt">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2">
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientX1"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientY1"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientZ1"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientC1"
+                android:textSize="24sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2">
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientX2"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientY2"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientZ2"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientC2"
+                android:textSize="24sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2">
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientX3"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientY3"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientZ3"
+                android:textSize="24sp" />
+
+            <TextView
+                style="@style/Coefficient"
+                android:id="@+id/coefficientC3"
+                android:textSize="24sp" />
+        </TableRow>
+
+    </TableLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center|center_horizontal"
+        android:padding="6dp"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/hint"
+            android:layout_width="0dp"
+            android:layout_height="30pt"
+            android:layout_weight="1"
+            android:textSize="12pt"
+            android:text="Hint" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+
+            android:layout_width="0dp"
+            android:layout_height="10pt"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@color/black"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:orientation="horizontal"
+        android:padding="6dp"
+        android:weightSum="2">
+
+        <ImageButton
+            android:id="@+id/swapRows"
+            style="@style/RowOperationButton"
+            android:layout_width="match_parent"
+            android:src="@drawable/ri_swap_rj" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:orientation="horizontal"
+        android:padding="6dp"
+        android:weightSum="2">
+
+        <ImageButton
+            android:id="@+id/multByConstant"
+            style="@style/RowOperationButton"
+            android:layout_width="match_parent"
+            android:src="@drawable/cri" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:orientation="horizontal"
+        android:padding="6dp"
+        android:weightSum="2">
+
+        <ImageButton
+            android:id="@+id/rowPlusConstantRow"
+            style="@style/RowOperationButton"
+            android:layout_width="match_parent"
+            android:src="@drawable/ri_plus_crj" />
+
+    </LinearLayout>
+
+</LinearLayout>
