--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_main2.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_main2.xml
@@ -20,7 +20,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.2">
+            android:layout_weight="0.2"
+            android:gravity="center_vertical">
 
             <View
                 android:id="@+id/divider4"
@@ -69,7 +70,8 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2">
+            android:layout_weight="0.2"
+            android:gravity="center_vertical">
 
             <View
                 android:id="@+id/divider2"
@@ -116,9 +118,11 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/row3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2">
+            android:layout_weight="0.2"
+            android:gravity="center_vertical">
 
             <View
                 android:id="@+id/divider6"
@@ -143,7 +147,7 @@
                 android:textSize="24sp" />
 
             <View
-                android:id="@+id/divider"
+                android:id="@+id/row3Divider"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
@@ -180,11 +184,17 @@
         android:weightSum="2">
 
         <Button
+            android:id="@+id/undoButton"
+            android:layout_width="0dp"
+            android:layout_height="25pt"
+            android:layout_weight="1"
+            android:text="Undo" />
+
+        <Button
             android:id="@+id/hint"
             android:layout_width="0dp"
-            android:layout_height="30pt"
+            android:layout_height="25pt"
             android:layout_weight="1"
-            android:textSize="12pt"
             android:text="Hint" />
 
     </LinearLayout>
