--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_multiply_by_constant.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_multiply_by_constant.xml
@@ -31,21 +31,23 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30pt"
+            android:layout_height="24pt"
             android:layout_marginRight="10pt"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/constant"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="-7pt"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:gravity="center_vertical|right"
                 android:text="1"
                 android:textColor="@color/black"
-                android:textSize="30pt" />
+                android:textSize="20pt" />
 
             <ImageView
+                android:id="@+id/initialRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -55,9 +57,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.1"
-                android:src="@drawable/doublearrow" />
+                android:src="@drawable/right_arrow" />
 
             <ImageView
+                android:id="@+id/finalRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -65,19 +68,46 @@
 
         </LinearLayout>
 
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="horizontal">-->
+
+<!--        </LinearLayout>-->
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-        <TableLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingRight="3pt"
+            android:paddingLeft="3pt"
             android:background="@color/white">
 
-            <TableRow
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    style="@style/NumberButton"
+                    android:id="@+id/row1Button"
+                    android:layout_height="25pt"
+                    android:text="Row 1"/>
+
+                <Button
+                    style="@style/NumberButton"
+                    android:id="@+id/row2Button"
+                    android:layout_height="25pt"
+                    android:text="Row 2"/>
+
+                <Button
+                    style="@style/NumberButton"
+                    android:id="@+id/row3Button"
+                    android:layout_height="25pt"
+                    android:text="Row 3"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="0pt"
@@ -104,9 +134,9 @@
                     android:text="@string/del" />
 
 
-            </TableRow>
+            </LinearLayout>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -131,9 +161,9 @@
                     android:text="@string/PlusMinus" />
 
 
-            </TableRow>
+            </LinearLayout>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -153,41 +183,38 @@
                     android:text="@string/_3" />
 
                 <Button
-                    android:id="@+id/buttonAddEqn"
+                    android:id="@+id/buttonFrac"
                     style="@style/EquationVariable"
-                    android:text="" />
+                    android:text="/" />
 
-            </TableRow>
+            </LinearLayout>
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <Button
-                    android:id="@+id/buttonFrac"
-                    style="@style/NumberButton"
-                    android:text="/" />
-
-                <Button
                     android:id="@+id/button0"
                     style="@style/NumberButton"
-                    android:text="@string/_0" />
+                    android:text="0" />
 
                 <Button
-                    android:id="@+id/buttonDot"
-                    style="@style/NumberButton"
-                    android:text="" />
-
-                <Button
-                    android:id="@+id/buttonSubEqn"
+                    android:id="@+id/buttonMultiply"
                     style="@style/EquationVariable"
-                    android:text="" />
+                    android:text="Multiply" />
+
+                <Button
+                    android:id="@+id/buttonCancel"
+                    style="@style/EquationVariable"
+                    android:text="Cancel" />
 
 
-            </TableRow>
 
 
-        </TableLayout>
+            </LinearLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
