--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_hint.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_hint.xml
@@ -29,8 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:text="Hint"
             android:paddingLeft="5pt"
+            android:text="Hint"
+            android:textColor="#000000"
             android:textSize="16pt" />
 
         <LinearLayout
